crates/nyx-lexer/tests/snapshots/integration_tests__control_flow__return_various.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: early_return
- LParen
- Ident: x
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Indent
- If
- Ident: x
- Lt
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Return
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Dedent
- Let
- Ident: result
- Eq
- Ident: x
- Star
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Return
- Ident: result
- Newline
- Dedent
- Func
- Ident: multiple_returns
- LParen
- Ident: x
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Indent
- If
- Ident: x
- EqEq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Return
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Dedent
- Elif
- Ident: x
- EqEq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Indent
- Return
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Dedent
- Else
- Newline
- Indent
- Return
- Ident: x
- Star
- Ident: x
- Newline
- Dedent
- Dedent
